Latest TC changes

--- a/jors2016.tex
+++ b/jors2016.tex
@@ -97,26 +97,24 @@ An additional capability, called `Network Flick' was developed which allowed lea
 Whilst technically this was achievable in the lab-classroom, the co-location of all groups resulted in a study design which made the gesture’s capabilities pedagogically ineffective.
 
 Recent research building on the outcomes of the SynergyNet project has focused on developing the use of multi-touch tables for group work in multiple schools, resulting in the network flick gesture of the framework now having a pedagogical grounding and purpose.
-The project this research forms part of has resulting in the collaboration with two schools which are geographically distant in the UK (approximately 300 miles apart) -- one near the city of Durham in the north of England and the other near Caerphilly in south Wales.
+The project this research forms part of has resulting in the collaboration with two schools which are geographically distant in the UK (approximately 300 miles apart) -- one near the city of Durham in the north-east of England and the other near Caerphilly in south Wales.
 Despite their distance, the areas share an interesting common industrial heritage; specifically, they were at the heart of the coal mining industry which powered the industrial revolution.
 Latterly both areas have experienced significant post-industrial economic trauma with the closure of the mines and de-industrialisation.
 The impact on the children living in these former mining communities has led to a dislocation with their environment as they grow up with little or no first-hand knowledge of mining, although are aware of the cultural heritage of the community (as well as their families) -- both participating schools reported that learners in their schools were aware of mining as a ‘heritage’ activity but did not relate it to their lives now or consider it relevant to people of their age.
 
-The project sought to address this by establishing shared group work through the network flick gesture.
-The multi-touch tables were used to support children in collaborative group tasks previously intended to be completed by a single group assumed to be working in a single location.
-However, to try and increase the sense of common history and shared endeavour, the task was split with children in both locations being asked to work together to solve the problem, communicating via video conferencing software (visual and verbal) as well as by sharing data via the network flick gesture
-This paper focuses on the technical challenges in the design and implementation of the framework which was shown to be stable and accessible by learners in both locations.
-Further papers, already in writing, will focus on the pedagogical and social implications of the study.
+The project sought to address this by establishing shared group work through the network flick gesture; the multi-touch tables were used to support children in collaborative group tasks previously intended to be completed by a single group assumed to be working in a single location.
+However, to try and increase the sense of common history and shared endeavour, the task was split with children in both locations being asked to work together to solve the problem, communicating via video conferencing software (visual and verbal) as well as by sharing data and resources via the network flick gesture.
+This paper primarily focuses on the technical challenges in the design and implementation of the framework from a research software engineering perspective, identifying key issues and constraints; future work, already in progress, will focus on the wider pedagogical and social implications of the study.
 
 \subsection{Network Flick}
 
-The network flick gesture is built on the metaphor of pushing items around on a low-friction surface (like ice) where a small amount of initial effort can allow the item the force is exerted on to travel a great distance.
-An amount of friction can be applied to decelerate flicked objects over time which is useful for both helping users keep control of items (i.e.
-so they don't travel indefinitely at high speeds after being flicked making them difficult to grab and stop) and for making the behaviour of the item better match its real world equivalent from the metaphor of objects on ice.
+***{\emph{TC: Must be a corpus of work we can reference here, esp. in regards to games and flick gestures? Let me look...}}***
 
-The networking element of this gesture comes when users flick a content item in the direction of the interface they wish to send content to.
-The item travels off the side of the initial interface and appears on the target interface as shown in Figure~\ref{fig:FlickExample}.
-Flicking in a direction where there is no interface results in the item bouncing off the interface boundary.
+The network flick gesture is built upon the metaphor of pushing items around on a low-friction surface (such as ice), now a common feature of many mobile and touch screen devices.
+A small amount of initial effort can allow the item on which the force is being exerted to travel a great distance, whereas friction can be applied to decelerate flicked objects over time which is useful for both helping users keep control of items (i.e. so they do not continue to travel indefinitely at high speeds after being flicked making them difficult to grab and stop) and for making the behaviour of the item better match its real world equivalent from the metaphor of sliding objects on ice.
+
+The networking element of this gesture appears when users flick a content item in the direction of the interface to which they wish to send content; the item travels off the side of the initial interface and appears on the target interface as shown in Figure~\ref{fig:FlickExample}.
+Flicking in a direction where there is no connected interface results in the item bouncing off the interface boundary, as would be expected in the real world.
 
 \begin{figure}[h]
  \centering
@@ -125,72 +123,64 @@ Flicking in a direction where there is no interface results in the item bouncing
    \label{fig:FlickExample}
 \end{figure}
 
-When the item arrives on the target interface, the framework can use its knowledge of the interface locations to ensure the item travels into view from the direction of the source interface.
-This is intended to aid users in identifying where newly arrived content items were sent from when the interfaces are co-located.
-
-The use of a flicking gesture not only informs users on recipient interfaces of the genesis of transferred items but also creates an intuitive way of sending content.
-Users are capable of choosing their recipient through the direction of the flick and start the transfer simply by moving the item in that direction and releasing it.
+When the item arrives on the target interface, the framework can use its knowledge of the interface locations to ensure the item appears in view from the appropriate direction of the source interface.
+This is intended to aid users in easily identifying from where newly arrived content items have been sent when the interfaces are co-located.
+The use of a flicking gesture not only informs users on recipient interfaces of the origin of transferred items but also creates an intuitive way of sending and sharing content.
+Users are capable of choosing their recipient through the direction of the flick and thus initiate the transfer simply by moving the item in that direction and releasing it.
 This is intended to reduce the cognitive load usually required to move content between interfaces.
-The potential benefit is thought to be that by having a simple method to move content between interfaces, users will be more willing to share items as there is less of a barrier to sending and receiving.
+The potential benefit of this approach, by having a simple method to move content between interfaces, users will be more willing to share items as there is less of a barrier to sending and receiving.
 
-Though the network flick gesture is attention grabbing, little use has been found for it.
-The feature has been present in The SynergyNet framework since its earliest versions but very few apps utilise it.
-While some apps that entail the transfer of materials between interfaces do support the gesture, most encourage users to use other, more traditional, methods of sharing contents (such as placing items in shared areas or through using a context menu).
+Though the network flick gesture has a number of potentially benefits, little use has previously been found for it; the feature has been present in the SynergyNet framework since its earliest versions, but very few apps utilise it.
+While some apps that require the transfer of materials between interfaces do support the gesture, most encourage users to use other, more traditional, methods of sharing contents (such as placing items in shared areas or through using a context menu).
 
-Some previous studies have been carried out investigating the HCI-aspects of the network flick gesture [papers in progress] but none of these have entailed its use in a classroom environment.
+***{\emph{TC: Find some more citations for below...}}***
+
+Previous studies have investigated the human-computer interaction and affective computing aspects of the network flick gesture, but none of these have entailed its use in a classroom environment.
 Typically, classroom-based studies with SynergyNet have utilised a remote teacher interface to orchestrate the transferral of content~\cite{joycegibbons:2016}.
-
-Though the gesture is often used in the warm-up and cool-down sessions (to get participants used to interacting through the touch-screens and as a form of reward respectively) during previous studies with UK Key Stage 1 and 2 students and has always been well received, there has been little data collected on its use by pupils as part of classroom activities.
-Where it has been used, the network flick has always been performed to transfer content between two co-located interfaces previously.
+Though the gesture is often used in the warm-up and cool-down sessions (to get participants used to interacting through the touch screen devices and as a form of play reward) during previous studies with UK Key Stage 1 and 2 students and has always been well received, there has been little data collected on its use by pupils as part of classroom activities.
+% Where it has been used, the network flick has always been performed to transfer content between two co-located interfaces previously.
 
 \subsection{Co-Location}
 
 The majority of SynergyNet features have been developed with co-located interfaces as the intended environment for their use.
-Often in the past, the apps developed for SynergyNet and features for the framework itself have been created for specific studies.
-As all of these studies took place in singular environments the features and apps of the framework were built assuming co-located environments.
-Though efforts were made to ensure that SynergyNet was dynamic and adaptable as possible, functioning across multiple environments in separate locations was not a priority during its past development and as a consequence there are several shortcoming in the systems.
+Often in the past, the apps developed for SynergyNet and key features for the framework itself have been created for specific research studies.
+As all of these studies have taken place in single environments, the features and apps of the framework were built assuming co-located environments.
+Though efforts were made to ensure that the SynergyNet framework was dynamic and adaptable as possible, functioning across multiple environments in separate locations was not a priority during its past development and as a consequence there are several shortcoming in the system design.
 This is apparent in both the visual and functional design of the framework and apps.
 
-Many of the interfaces presume that users will be together in the same environment and able to see each other's screen directly.
-This has a large impact on the design of visual elements, such as menus.
-For example, the menu used by teachers to transfer content in previous studies assumes that the teacher is able to see pupil's interfaces so that they can choose which group's work they can display to the class.
+Many of the interfaces presume that users will be together in the same environment and able to see each other's screen directly; this has a large impact on the design of visual elements, such as the menus; for example, the menu used by teachers to transfer content in previous studies assumes that the teacher is able to see pupil's interfaces so that they can choose which group's work they can display to the class.
 
-The network flick gesture makes a large presumption about its use which results from its intention for use between co-located interfaces.
-This is that users will know where their target interface is in relation to them.
-However, this knowledge can be made available to users even when their target interface is in a remote location.
-The implications of not directly seeing the target interface when performing a network flick gesture are one of the focuses of the trial.
+The network flick gesture itself makes an assumption about its use which results from its intention for previous use between co-located interfaces: that users will know where their target interface is in relation to them.
+However, this knowledge can also be made available to users even when their target interface is in a remote location.
+The implications of not directly seeing the target interface when performing a network flick gesture are one of the key focuses of this new strand of work.
 
 \subsection{Other Technical Considerations}
 
-Not only has the design of the SynergyNet framework and its apps been limited by the assumption of use across only co-located interfaces.
-The technical workings of the system have also been restricted.
-The use of single environments in the past meant that the framework was always deployed across a single Local Area Network LAN) in all studies.
-As there was no need previously for the framework to be able to work across anything beyond a LAN many of the features are not capable of functioning across the internet.
+Both the design and the technical underpinnings of the SynergyNet framework and its apps been limited by the assumption of use across only co-located interfaces.
+The use of single environments in the past meant that the framework was always deployed across a single Local Area Network (LAN) in all studies; as there was no need previously for the framework to be able to work across anything beyond a LAN many of the features are not capable of functioning across the wider internet.
 
-Despite the intention of being used solely across LANs in the past a large amount of the framework's networking capability was built in such a way that it could function across the internet.
+***{\emph{TC: Fix references here...}}***
+
+Despite the intention of being used solely across LANs in the past a large amount of the framework's networking capability was built in such a way that it could easily function across the internet.
 The use of third party libraries such as OpenFire~\cite{igniterealtime:2016} and Hazelcast~\cite{hazelcast:2016} mean that the framework can use several different protocols across wider networks for communicating messages to each other.
 
-However, there are some network features that are limited to LAN.
-An example of this is how media content is transferred between instances of the framework.
-The framework uses a shared network location as a form of cache.
-This was beneficial in the past as it was simple to implement and gave teachers a single location to collect the files used in a lesson for use in future lessons.
-The secure use of a shared network location across a wider network, such as the internet, is inadvisable without precautions due to the security and speed of such a technique.
+However, there are some network features that are solely limited to LAN; an example of this is how media content is transferred between instances of the framework.
+The framework uses a shared network location as a form of cache, which was beneficial in the past as it was simple to implement and gave teachers a single location to collect the files used in a lesson for use in future lessons.
+The secure use of a shared network location across a wider network, such as the internet, is inadvisable without precautions due to data security and latency of such a technique.
 It was therefore a requirement that some development work took place prior to the trial taking place to allow the framework, or at least the app used, to function over the internet as the two locations used would not be able to share a typical LAN.
 
 
 \section{Trial Design}
 
-For the trial, two groups of UK Key Stage 2 students (9 - 10 years old) at separate locations were encouraged to work together on a classroom activity.
-One group were situated in a school in the North East of England and the other in a school in South Wales.
-Each group was allocated a large touch-screen interface to work together on the activity with.
-Touch-screen table-top interfaces (Samsung SUR40s) were used.
-The horizontal nature of the interfaces was chosen to allow multiple students to work around the devices.
-The two table-top interfaces were networked together to share content between them, specifically through the network flick gesture.
-To allow the teams to communicate and to give them a direction to focus their flick gestures towards, a tablet was positioned by the tables along one side at both locations.
-This tablet used video-conference software (i.e. Skype) to allow the teams to see each other.
-The tables were configured so that flicking items towards the tablet screen would transfer them to the remote table.
-This was achieved by configuring the tables so that they were virtually positioned next to each other (with the sides on which the tablets were placed being parallel to each other) when in reality they were on opposite sides of the country.
-This meant each table considered the other to be co-located.
+***{\emph{TC: Are we providing a methodology here, or an overview to the approach to aid understanding of the technical aspects for this paper?}}***
+
+For this trial, two groups of UK Key Stage 2 students (aged 9-10 years old) at separate locations were encouraged to work together on a classroom activity.
+As previously mentioned, one group was situated in a school in the north-east of England and the other in a school in South Wales.
+Each group was allocated a large touch-screen table-top device (Samsung SUR40s) to work together on the collaborative activity; the landscape nature of the interfaces was chosen to allow multiple students to work around the devices at the same time.
+The two devices were networked together to share content between them, specifically through the network flick gesture.
+To allow the teams to communicate and to give them a direction to focus their flick gestures towards, a tablet was positioned by the tables along one side at both locations, using video-conferencing software (Skype) to allow the teams to see each other and communicate verbally.
+The tables were configured so that flicking items towards the tablet screen would transfer them to the remote table; this meant each table considered the other to be co-located.
+This was achieved by configuring the tables so that they were virtually positioned next to each other (with the sides on which the tablets were placed being parallel to each other), when in reality they were on opposite sides of the country.
 With students passing items towards their `window' to the other team, the metaphor of physically pushing items towards another interfaces was maintained.
 
 Virtually positioning the tables side-by-side also meant that the entire edge of the tables with the tablet on (one of the longer edges of the widescreen aspect ratio interfaces) could be used as the target for network flicks.
@@ -201,13 +191,14 @@ Normally a realistic effect is employed where the time taken for items to transf
 This is a useful behaviour for co-located interfaces as it bolsters the metaphor of real objects being pushed around the environment.
 However, this behaviour would not be suitable with the interfaces using their real world locations in the trial as it would take a long time (likely longer than the trial sessions, even with the fastest flick the interfaces are capable of identifying).
 With the virtual distance between the tables set to be as small as possible the flick behaviour had the effect of items travelling the distance from one interface to the other via the `window'.
-The positioning of the tables was set through configuration.
-Other changes to make the framework ready for the trial required some new developments.
+% The positioning of the tables was set through configuration.
+% Other changes to make the framework ready for the trial required some new developments.
 
 \subsection{Flick Mysteries}
 
-It was decided that the task to be collaborated on in the trial was Mysteries; a classroom activity where students use a selection of clues, such as snippets of text and images, to solve a problem or come to a conclusion about an open question.
-This task has been used in several previous studies using SynergyNet~\cite{mercier:2013,mercier:2014,mercier:2015}.
+***{\emph{TC: Do we need to explain this a bit more? Maybe not...}}***
+
+It was decided that the task to be collaborated on in the trial was Mysteries; a classroom activity where students use a selection of clues, such as snippets of text and images, to solve a problem or come to a conclusion about an open question; this task has been used in several previous studies using SynergyNet~\cite{mercier:2013,mercier:2014,mercier:2015}.
 
 \begin{figure}[h]
  \centering
@@ -217,9 +208,9 @@ This task has been used in several previous studies using SynergyNet~\cite{merci
 \end{figure}
 
 Though mysteries is an existing task supported by several apps for the SynergyNet framework, none of them utilise the network flick gesture.
-This required the creation of a new app which would manage the loading of the materials in a dynamic way (i.e. Text snippets from a simple XML file and media from any other files in a folder - though video and audio clips are supported by the app only images were used in the trial alongside the text snippets to reduce potential confounding factors) and allow them to be transferred through the network gesture.
+This required the creation of a new app which would manage the loading of the materials in a dynamic way (i.e. text snippets from a simple XML file and media from any other files in a folder -- though video and audio clips are supported by the app only images were used in the trial alongside the text snippets to reduce potential confounding factors) and allow them to be transferred through the network gesture.
 The dynamic content system allowed for the app to be easily configured so that each site would have a different selection of clues for each mysteries task, forcing them to share content with the students at the remote location.
-Figure~\ref{fig:FlickMysteryExample} shows the app built for the trial with content relevant to the task dynamically generated from an XML file ready for transferral through the network flick mechanism.
+Figure~\ref{fig:FlickMysteryExample} shows the app built for the trial with content relevant to the task dynamically-generated from an XML file ready for transferral through the network flick mechanism.
 
 \subsection{Technical Challenges}
 
@@ -257,11 +248,8 @@ This update was initially a change at the app level but has since been integrate
 
 It was originally intended that all devices used in the trial could be connected to the internet via the schools' networks (both the tablets and table-top interfaces are capable of using wireless connections).
 However, during preparation for the trial it was discovered that the firewalls at both of the schools were blocking the traffic relating to Zero-Tier.
-The use of the Zero-Tier VPN had been tested in environments with strict firewall policies (e.g. University networks) and had operated as expected.
-It appears that the school firewalls were locked down much more than anticipated.
-
-This meant that SynergyNet could not operate when connected to the Zero-Tier VPN when connected through the schools’ networks.
-However, the tablets functioned with no problems at both locations.
+The use of the Zero-Tier VPN had been tested in environments with strict firewall policies (e.g. University networks) and had operated as expected; however, it appears that the school firewalls were locked down much more than anticipated.
+This meant that SynergyNet could not operate when connected to the Zero-Tier VPN when connected through the schools’ networks; however, the tablets functioned with no problems at both locations.
 
 Adding exceptions to the firewalls would have allowed the connections to the VPN to function correctly but was not feasible.
 The IT administrators responsible for both schools were unavailable during the small time-scales of the trial.
@@ -292,7 +280,7 @@ This quantitative data could then be used alongside quantitative information, li
  
 \subsection{Data Collection}
 
-To collect data during the trial screen-recording software was used.
+To collect data during the trial, screen-recording software was used.
 This software was installed on both tablets allowing both sides of the video conferencing software used for communication between the groups to be recorded.
 In addition to this stand-alone cameras were used at both locations to record in high detail interactions with and around the table-top interfaces.
 
@@ -317,8 +305,7 @@ The intention was to use SynergyView to annotate the videos from both groups in 
 As multiple sessions took place during the study where different groups of students participated there were several sets of videos to annotate together.
 The resulting cross-tabs of information relating each of the sessions could then be collated and analysed as one large dataset.
 
-The tool allows for the exporting and importing of annotations made.
-During the data collation, several researchers worked together to annotate the videos.
+The tool allows for the exporting and importing of annotations made; during the data collation, several researchers worked together to annotate the videos.
 The ability to share annotations allowed for this to be collaborative effort made between sites. 
 
 This quantitative data, in addition to other more qualitative observations made during the sessions and from the videos, should provide some insights into the use of the trial's configuration of technologies in the classroom.
@@ -326,9 +313,10 @@ This quantitative data, in addition to other more qualitative observations made 
 
 \section{Lessons Learnt}
 
+***{\emph{TC: Lots of short sentences here; are all of these lessons learnt applicable to the technical outcomes of this paper? They are generally good/useful, but we need to hit the technical issues much harder here. I will need to work through this section again after Gary has had a go.}}***
+
 Analysis of the results from the trial are now underway and will be reported on in future research.
-However, there are already outcomes from the trial.
-The process of preparing, running and collecting data from the trail has produced several tangible deliverables.
+However, there are already outcomes from the trial; the process of preparing, running and collecting data from the trail has produced several tangible deliverables.
 
 One such deliverable is the Flick Mysteries application for SynergyNet.
 This application is now available through the SynergyNet repository~\cite{hatch:2011} for any researcher who wishes to replicate the trial.
@@ -358,10 +346,14 @@ This led to the quicker production of usable video annotations than would have o
 
 \subsection{Future Work}
 
+***{\emph{TC: We need to tail this more strongly to identify the key technical contributions, as well as linking to any emerging policy?}}***
+
 With the changes to the framework made as part of the trial, SynergyNet is now well suited for use across the internet where a VPN is set up appropriately.
 This allows for the tables used in the trial to be re-deployed anywhere where there is an acceptable 3G/4G signal or with an alternate network connection where the network is configured appropriately.
 This will enable for further trials using the framework and the tables used in the trial at separate sites.
 These further trials may involve following up any discoveries uncovered as part of the trial's data-analysis.
+
+***{\emph{TC: Check refs, maybe a few more options here from both GB's and TC's previous work?}}***
 
 \bibliographystyle{ieeetr}
 \bibliography{jors2016}
